<resources>
    <string name="app_name">ZZT1</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up_or_login">Sign Up OR Login</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_home">Home</string>
    <string name="menu_bookings">Bookings</string>"
    <string name="menu_cart">Cart</string>
    <string name="todo">TODO</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="zaza_legacy_wines_logo">Zaza Legacy Wines Logo</string>
    <string name="menu_button">Menu Button</string>
    <string name="product_image">Product Image</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="addiction_helpline">Addiction Helpline</string>
    <string name="cancellation">Cancellation</string>
    <string name="deliveries">Deliveries</string>
    <string name="legal_drinking_age_to_purchase">Legal Drinking Age To Purchase</string>
    <string name="order_out_of_stock">Order Out of stock</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="return_policy">Return Policy</string>
    <string name="we_recommend_receiving_aid_from_alcoholics_anonymous_aa_0800_12_13_14_if_you_or_someone_you_know_is_struggling_with_addiction_please_consider_reaching_out_for_support_these_services_are_usually_available_24_7_and_offer_confidential_support">We recommend receiving aid from Alcoholics Anonymous (AA) 0800 12 13 14. If you or someone you know is struggling with addiction, please consider reaching out for support. These services are usually available 24/7 and offer confidential support.</string>
    <string name="orders_can_be_canceled_within_a_specified_timeframe_before_collection_if_you_need_to_cancel_please_contact_our_customer_service_as_soon_as_possible_at_info_bantukraal_com_if_your_order_is_already_prepared_you_may_need_to_follow_the_return_process_after_collecting_the_item">Orders can be canceled within a specified timeframe before collection. If you need to cancel, please contact our customer service as soon as possible at info@bantukraal.com. If your order is already prepared, you may need to follow the return process after collecting the item.</string>
    <string name="at_this_time_our_company_does_not_offer_delivery_services_all_orders_are_available_for_collection_only_once_your_order_is_ready_you_will_receive_a_notification_with_pickup_instructions_including_the_location_and_available_collection_times"> We offer world wide shipping. All items include the delivery fee. You will receive a email upon successful payment where tou can respond with your delivery information. Should you want to collect, pickup instructions will be included in the email , including the location and available collection times</string>
    <string name="please_note_that_you_must_be_of_legal_drinking_age_to_purchase_certain_products_proof_of_age_may_be_required_at_the_collection_point_so_please_bring_a_valid_id_with_you_to_confirm_your_eligibility">Please note that you must be of legal drinking age to purchase certain products. Proof of age may be required at the collection point, so please bring a valid ID with you to confirm your eligibility</string>
    <string name="if_an_item_is_out_of_stock_you_may_have_the_option_to_sign_up_for_notifications_when_it_becomes_available_again_alternatively_feel_free_to_ask_our_team_about_possible_alternatives_or_restocking_timelines">If an item is out of stock, you may have the option to sign up for notifications when it becomes available again. Alternatively, feel free to ask our team about possible alternatives or restocking timelines.</string>
    <string name="we_accept_a_variety_of_payment_methods_including_major_credit_and_debit_cards_and_mobile_payments_payment_can_be_completed_online_when_placing_your_order_or_at_the_collection_point_if_pre_arranged">We accept a variety of payment methods, including major credit and debit cards and mobile payments. Payment can be completed online when placing your order, or at the collection point if pre-arranged.</string>
    <string name="we_accept_returns_for_items_in_their_original_unopened_condition_within_14_days_of_collection_please_bring_your_proof_of_purchase_to_the_collection_point_to_facilitate_the_return_refunds_will_be_issued_to_the_original_payment_method_or_as_store_credit">We accept returns for items in their original, unopened condition within 14 days of collection. Please bring your proof of purchase to the collection point to facilitate the return. Refunds will be issued to the original payment method or as store credit.</string>
    <string name="please_note_items_only_available_for_collection_in_jhb_and_cpt">Please Note: Items include delivery charge, we will be in contact via email to get Delivery Details</string>
    <string name="our_products">Our Products</string>
    <string name="name">name</string>
    <string name="your_cart">Your Cart</string>
    <string name="checkout">Checkout</string>
    <string name="event_booking_query">Event Booking Query</string>
    <string name="submit">Submit</string>
    <string name="date_of_booking">Date of Booking</string>
    <string name="email_address">Email Address</string>
    <string name="name_and_surname">Name and Surname</string>
    <string name="phone_number">Phone Number</string>
    <string name="the_request">The Request</string>
    <string name="already_a_user_login_now">Already a user? Login now</string>
    <string name="app_logo">App Logo</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
</resources>