<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.zzt1.ui.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/activity_main" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.zzt1.ui.ui.gallery.GalleryFragment"
        android:label="@string/menu_bookings"
        tools:layout="@layout/activity_second" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.zzt1.ui.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_slideshow" />
</navigation>